# django-boilerplate

./: .cz.toml  .editorconfig  .gitignore  .yamllint.yaml  404.html  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  ruff.toml  search.html  sitemap.xml
.github/actions/poetry/: action.yaml
.github/actions/python/: action.yaml
.github/actions/virtualenv/: action.yaml
.github/workflows/: ci.yaml  debug.yaml  deploy-ftp.yaml  docs-deploy.yaml  docs-setup.yaml  docs.yaml  ftp-deploy.yaml  ftp-setup.yaml  lint-test.yaml  paths.yaml  poetry.yaml  setup.yaml  stale.yaml
docs/: pypackage.md
scripts/: yamlfix.py  yamllint.py
scripts/fix_yaml/: fix_yaml.py
search/: search_index.json
src/: __init__.py  manage.py  temp.py
src/app/: __init__.py  admin.py  apps.py  contexts.py  models.py  tests.py  urls.py  views.py
src/app/templates/: base.html
src/app/templates/app/: index.html
src/project/: __init__.py  settings.py  urls.py
src/pypackage/: __init__.py  dummy.py
temp/: index.html
tests/: test_temp.py
tests/pypackage/: test_dummy.py
