[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = "Django boilerplate using Poetry with Python."
keywords = ["python", "poetry", "django", "boilerplate"]
authors = ["MenSeb <sebastien.menard.github@gmail.com>"]
maintainers = ["MenSeb <sebastien.menard.github@gmail.com>"]
repository = "https://github.com/MenSeb/django-boilerplate.git"
homepage = "https://github.com/MenSeb/django-boilerplate.git"
documentation = "https://menseb.github.io/django-boilerplate/docs"
license = "MIT"
readme = "README.md"
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Pytest",
  "Framework :: Sphinx",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Natural Language :: French",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Database",
  "Topic :: Software Development",
  "Topic :: Utilities"
]
packages = []
include = []
exclude = []

[tool.poetry.urls]
"JIRA" = "https://menseb.atlassian.net/jira/software/projects/DB/boards/5"


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.7.0"

